# advent-of-code

./: .gitignore  .shellcheckrc  README.md  deno.json  pyproject.toml
2015/01/tests/: solution.test.ts
aoc/: scaffold.py  solve.py  start.py
aoc/2015/: 1a.py
aoc/2024/: 10a.py  10b.py  11a.py  11b.py  1a.py  1b.py  2a.py  2b.py  3a.py  3b.py  4a.py  4b.py  5a.py  5b.py  6a.py  6b.py  7a.py  7b.py  8a.py  8b.py  9a.py  9b.py
aoc/utils/: api.py  benchmark.py  cli.py  inputs.py  logs.py  new.py  parse_cli_args.py  profile.py  readme.py  scaffold.py  solve.py
aoc/utils/py/: template.py
aoc/utils/python/: cli.py  inputs.py  run.py  solve.py  submit.py
aoc/utils/typescript/: cli.ts  inputs.ts  run.ts  solve.ts  submit.ts
solutions/2015/: 1a.py  1b.py
solutions/2015/inputs/: 1.txt
templates/: python.txt  rust.txt  typescript.txt
utils/: downloadInput.ts  scaffoldDay.ts  submitSolution.ts  use_python_sdk.py
utils/py/: template.py
