[project]
name = "advent-of-code"
description = "My solutions to all years of Advent of Code in Python"
requires-python = ">=3.13"
version = "0.1.0"
dependencies = [
  "mypy>=1.12.0",
  "pytest>=8.3.3",
  "rich>=13.9.3",
  "ruff>=0.6.9",
]

# see: https://docs.pytest.org/en/stable/reference/customize.html
[tool.pytest.ini_options]
python_files = "*.py" # find tests in solution files
testpaths = ["solutions"] # only traverse the solutions directory

[tool.ruff.lint]
extend-select = [
  "I" # enable isort rules in the CLI (see: https://github.com/astral-sh/ruff-vscode?tab=readme-ov-file#configuring-vs-code)
]
unfixable = [
  "F401" # don't delete unused imports while fixing lint errors on save
]
