[project]
name = "advent-of-code"
description = "My solutions to all years of Advent of Code in Python"
requires-python = ">=3.13"
version = "0.1.0"
dependencies = [
  "expression>=5.3.0",
  "mypy>=1.12.0",
  "pandas>=2.2.3",
  "pytest-watcher>=0.4.3",
  "pytest>=8.3.3",
  "rich>=13.9.3",
  "ruff>=0.6.9",
]

# see: https://docs.pytest.org/en/stable/reference/customize.html
[tool.pytest.ini_options]
python_files = "*.py" # find tests in solution files
testpaths = ["aoc"] # only traverse the solutions directory

# see: https://github.com/olzhasar/pytest-watcher?tab=readme-ov-file#available-options
[tool.pytest-watcher]
now = true
clear = false
delay = 0.2
runner = "pytest"
runner_args = []
patterns = ["*.py"]
ignore_patterns = []

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
  "I" # enable isort rules in the CLI (see: https://github.com/astral-sh/ruff-vscode?tab=readme-ov-file#configuring-vs-code)
]
unfixable = [
  "F401" # don't delete unused imports while fixing lint errors on save
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.2.3.241009",
]
